--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="ChatGPT ahora trabaja para vos. Llevamos tu menú a CHATGPT. Un asistente que conoce tu carta a la perfección y recomienda como un experto." />
     <link rel="canonical" href="https://menu-chat.github.io/menuchat/" />
 
-    <meta property="og:title" content="MenuChat | ChatGPT ahora trabaja para vos." />
+    <meta property="og:title" content="MenuChat | ChatGPT ahora trabaja para vos" />
     <meta property="og:description" content="ChatGPT ahora trabaja para vos. La inteligencia artificial más potente del mundo con los sabores de tu cocina o barra." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://menu-chat.github.io/menuchat/MenuChat.png" />
