--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>MenuChat | La IA de ChatGPT en tu Mesa</title>
+    <title>MenuChat | ChatGPT ahora trabaja para vos.</title>
     <meta name="description" content="ChatGPT ahora trabaja para vos. Llevamos tu menú a CHATGPT. Un asistente que conoce tu carta a la perfección y recomienda como un experto." />
     <link rel="canonical" href="https://menu-chat.github.io/menuchat/" />
 
