--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MenuChat | ChatGPT ahora trabaja para vos." />
     <meta name="twitter:description" content="Convierte a ChatGPT en un asistente que recomienda como un experto." />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VRF91LTGEH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-VRF91LTGEH');
+</script>
+    
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
