--- a/templateA5.html
+++ b/templateA5.html
@@ -165,7 +165,8 @@
 <body>
 
     <div class="control-panel">
-        <label>URL del Menú:</label>
+        <label>Ingresa aquí la URL que te dimos.
+Ej: https://menu-chat.github.io/turestaurante/</label>
         <input type="text" id="menuUrl" placeholder="Ingresa aquí la URL que te dimos.
 Ej: https://menu-chat.github.io/turestaurante/">
         <br>
