--- a/templateA5.html
+++ b/templateA5.html
@@ -165,7 +165,7 @@
 <body>
 
     <div class="control-panel">
-        <label>Ingresa aquí la URL que te dimos.
+        <label>Ingresa aquí la URL que te dimos. <br>
 Ej: https://menu-chat.github.io/turestaurante/</label>
         <input type="text" id="menuUrl" placeholder="Ingresa aquí la URL que te dimos.
 Ej: https://menu-chat.github.io/turestaurante/">
