--- a/CopiadetemplateA5.html
+++ b/CopiadetemplateA5.html
@@ -64,8 +64,8 @@
             text-align: center;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            gap: 0px; /* Esta es la distancia entre cada bloque de contenido */
+            justify-content: centered;
+            gap: 20px; /* Esta es la distancia entre cada bloque de contenido */
             position: relative;
             border-right: 1px dashed #ccc; /* Guía de corte */
         }
