--- a/CopiadetemplateA5.html
+++ b/CopiadetemplateA5.html
@@ -58,16 +58,18 @@
 
         /* CADA TARJETA (MEDIA HOJA) */
         .display-card {
-            width: 50%;
-            height: 100%;
-            padding: 10px;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: centered;
-            gap: 10px; /* Esta es la distancia entre cada bloque de contenido */
-            position: relative;
-            border-right: 1px dashed #ccc; /* Guía de corte */
+    width: 50%;
+    height: 100%;
+    padding: 20px; /* Reducido para que no empuje hacia adentro */
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    /* Cambiamos 'space-between' por 'center' para que se junten */
+    justify-content: center; 
+    /* Esta es la distancia entre los bloques que pediste */
+    gap: 10px; 
+    position: relative;
+    border-right: 1px dashed #ccc;
         }
 
         .display-card:last-child { border-right: none; }
