--- a/index.html
+++ b/index.html
@@ -245,14 +245,18 @@
 
     <header>
         <div class="logo">MENU<span>CHAT</span></div>
-        <a href="https://wa.me/525564135562" class="btn-main">WhatsApp</a>
+        <a href="https://wa.me/525564135562" class="btn-main"
+			onclick="gtag('event', 'Clic_WhatsApp', {'event_category': 'Interaccion', 'event_label': 'Clic_WhatsApp'});">
+			WhatsApp</a>
     </header>
 
     <main>
         <section class="hero">
             <h1 class="reveal">ChatGPT ahora trabaja para vos.</h1>
             <p class="reveal">Llevamos tu menú a CHATGPT. Un asistente que conoce tu carta a la perfección y recomienda como un experto.</p>
-            <a href="#proyectos" class="btn-main reveal">Explorar Demos</a>
+            <a href="#proyectos" class="btn-main reveal"
+				onclick="gtag('event', 'Clic_Demos', {'event_category': 'Interaccion', 'event_label': 'Clic_Demos'});">
+				Explorar Demos</a>
         </section>
 
         <section class="info-section">
@@ -262,12 +266,14 @@
         </section>
 
         <section id="proyectos" class="demos-grid">
-            <a href="https://menu-chat.github.io/RomeRecoleta/" target="_blank" class="card card-rome reveal">
+            <a href="https://menu-chat.github.io/RomeRecoleta/" target="_blank" class="card card-rome reveal"
+				onclick="gtag('event', 'Clic_Rome', {'event_category': 'Interaccion', 'event_label': 'Clic_Rome'});">
                 <p>Cervecería • Argentina</p>
                 <h3>Rome Recoleta</h3>
                 <span>Probar experiencia →</span>
             </a>
-            <a href="https://menu-chat.github.io/RosaJamaica/" target="_blank" class="card card-rosa reveal" style="transition-delay: 0.1s;">
+            <a href="https://menu-chat.github.io/RosaJamaica/" target="_blank" class="card card-rosa reveal" style="transition-delay: 0.1s;"
+				onclick="gtag('event', 'Clic_Rosa', {'event_category': 'Interaccion', 'event_label': 'Clic_Rosa'});">
                 <p>Parador de Playa • Guatemala</p>
                 <h3>Rosa Jamaica</h3>
                 <span>Probar experiencia →</span>
@@ -276,7 +282,9 @@
 
         <section class="footer-cta">
             <h2 class="reveal">¿Llevamos a CHATGPT <br>a tu restaurante?</h2>
-            <a href="https://wa.me/525564135562" class="btn-main" style="background: black; color: white; padding: 1.5rem 3rem;">Hablemos ahora</a>
+            <a href="https://wa.me/525564135562" class="btn-main" style="background: black; color: white; padding: 1.5rem 3rem;"
+				onclick="gtag('event', 'Clic_Hablemos', {'event_category': 'Interaccion', 'event_label': 'Clic_Hablemos'});">
+				Hablemos ahora</a>
         </section>
 
         <section class="info-section">
@@ -291,14 +299,18 @@
                     <div style="max-width: 350px;">
                         <h3 style="font-size: 1.5rem; font-weight: 900; margin-bottom: 1rem;">DISPLAY A4 GENÉRICO</h3>
                         <p style="color: #888; margin-bottom: 2rem; line-height: 1.4;">Nuestro diseño oficial listo para tu QR. Con este poster maximizá el uso de tu asistente desde el primer día.</p>
-                        <a href="templateA4.html" target="_blank" class="btn-main" style="padding: 0.8rem 1.5rem; font-size: 0.7rem;">Abrir Generador</a>
+                        <a href="templateA4.html" target="_blank" class="btn-main" style="padding: 0.8rem 1.5rem; font-size: 0.7rem;"
+							onclick="gtag('event', 'Clic_A4', {'event_category': 'Interaccion', 'event_label': 'Clic_A4'});">
+							Abrir Generador</a>
                     </div>
 			
 
 		    <div style="max-width: 350px;">
                         <h3 style="font-size: 1.5rem; font-weight: 900; margin-bottom: 1rem;">DISPLAY A5 GENÉRICO</h3>
                         <p style="color: #888; margin-bottom: 2rem; line-height: 1.4;">Nuestro diseño oficial listo para tu Mesa. ChatGPT en tu mesa desde el primer día en formato Tent Card.</p>
-                        <a href="templateA5.html" target="_blank" class="btn-main" style="padding: 0.8rem 1.5rem; font-size: 0.7rem;">Abrir Generador</a>
+                        <a href="templateA5.html" target="_blank" class="btn-main" style="padding: 0.8rem 1.5rem; font-size: 0.7rem;"
+							onclick="gtag('event', 'Clic_A5', {'event_category': 'Interaccion', 'event_label': 'Clic_A5'});">
+							Abrir Generador</a>
                     </div>
 
 
